# SmartSpeakerFirmware

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
driver/: Makefile  smart_speaker_driver.c
include/: GUI.hpp  MusicPlayer.hpp  MusicPlayerGUI.hpp  NetworkService.hpp  Settings.hpp  SettingsService.hpp  Speaker.hpp  User.hpp
include/GUI/: GUI.hpp
include/GUI/Music/: MusicPlayer.hpp  MusicPlayerGUI.hpp
include/GUI/Video/: VideoPlayer.hpp  VideoPlayerGUI.hpp
include/Models/: Settings.hpp  User.hpp
include/Services/: NetworkService.hpp  SettingsService.hpp
src/: GUI.cpp  Main.cpp  MusicPlayer.cpp  MusicPlayerGUI.cpp  NetworkService.cpp  Settings.cpp  SettingsService.cpp  Speaker.cpp  User.cpp
src/GUI/: GUI.cpp
src/GUI/Music/: MusicPlayer.cpp  MusicPlayerGUI.cpp
src/GUI/Video/: VideoPlayer.cpp  VideoPlayerGUI.cpp
src/Models/: Settings.cpp  Speaker.cpp  User.cpp
src/Services/: NetworkService.cpp  SettingsService.cpp
